kubernetes/apps/network/envoy-gateway/config/external/gateway.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  annotations:
    external-dns.kubernetes.io/target: &hostname gateway-ext.${SECRET_DOMAIN}
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.kubernetes.io/hostname: *hostname
      lbipam.cilium.io/ips: "${LB_GATEWAY_EXT}"
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.${SECRET_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: All
    - name: http-root
      protocol: HTTP
      port: 80
      hostname: "${SECRET_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.${SECRET_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: "${SECRET_DOMAIN/./-}-production-tls"
    - name: https-root
      protocol: HTTPS
      port: 443
      hostname: "${SECRET_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: "${SECRET_DOMAIN/./-}-production-tls"
    - name: http-sqq
      protocol: HTTP
      port: 80
      hostname: "*.superquinquin-sur-deule.org"
      allowedRoutes:
        namespaces:
          from: All
    - name: https-sqq
      protocol: HTTPS
      port: 443
      hostname: "*.superquinquin-sur-deule.org"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: sqq-production-tls
    - name: ssh
      protocol: TCP
      port: 22
      allowedRoutes:
        kinds:
          - kind: TCPRoute
        namespaces:
          from: All
    - name: mqtt-tls
      protocol: TLS
      port: 8883
      hostname: "mqtt.${SECRET_DOMAIN}"
      allowedRoutes:
        kinds:
          - kind: TCPRoute
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: "${SECRET_DOMAIN/./-}-production-tls"
    - name: http-mcp
      protocol: HTTP
      port: 80
      hostname: "*.mcp.${SECRET_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: All
    - name: https-mcp
      protocol: HTTPS
      port: 443
      hostname: "*.mcp.${SECRET_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: "mcp-${SECRET_DOMAIN/./-}-production-tls"
